# bookshelf

./: .gitignore  CONTRIBUTING.md  DATA.md  README.md  SECURITY.md  __init__.py  package.json  plugin.yaml  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
assets/demo/vhs/: README.md  bookshelf-launch.tape
assets/demo/vhs/lib/: claude_session.py  record_env.sh
bookshelf/: __init__.py  __main__.py  ambient.py  app.py  cli.py  platform.py  storage.py
bookshelf/data/: books.py  books_fiction.py  books_history.py  books_philosophy.py  books_psychology.py  books_romance.py  books_science.py  books_startup.py  catalog.py  catalog_manifest.json  catalog_rejection_report.json  catalog_source_manifest.json  catalog_v2.json  catalog_v2.py  quotes.py
bookshelf/skill/: cadence.py  codex_notify.py  config.py  evaluation.py  hook.py  quote_picker.py  quote_state.py
bookshelf/ui/: colors.py  runtime.py  widgets.py
docs/: catalog-counts.md
extensions/: bookshelf.ts
hooks/: ambient.py  codex-hooks.json  hooks.json
scripts/: check_summary_lengths.py  check_wheel_install.py  compile_catalog.py
scripts/vhs/: SCRIPTS.md  bookshelf-launch.tape
scripts/vhs/lib/: claude_session.py
site/: README.md  package-lock.json  package.json
site/.openai/: hosting.json
site/app/: globals.css  layout.tsx  page.tsx
site/pagecast/: index.html  manifest.json
site/pagecast/assets/fonts/licenses/: source-serif-4-OFL.txt
site/tests/: rendered-html.test.mjs
skills/bookshelf/: SKILL.md
skills/bookshelf/agents/: openai.yaml
skills/bookshelf/scripts/: quote.py
tests/: test_ambient.py  test_ambient_env_overrides.py  test_bookshelf_hook.py  test_bookshelf_storage.py  test_bookshelf_summaries.py  test_cadence_cli.py  test_catalog_v2.py  test_cli.py  test_codex_notify.py  test_distribution.py  test_hook_privacy.py  test_host_adapters.py  test_host_smoke.py  test_pagecast_bundle.py  test_quote_state.py  test_relevance_evaluation.py
tests/fixtures/: relevance-v1.json
