[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ambient-bookshelf"
version = "1.0.0"
description = "A terminal book library and ambient quote companion for coding agents."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Amal David" },
]
keywords = [
  "agent-skills",
  "books",
  "cli",
  "codex",
  "claude-code",
  "hermes-agent",
  "pi-coding-agent",
  "quotes",
  "terminal",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console :: Curses",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Terminals",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Amal-David/bookshelf"
Repository = "https://github.com/Amal-David/bookshelf"
Issues = "https://github.com/Amal-David/bookshelf/issues"

[project.scripts]
bookshelf = "bookshelf.cli:main"

[tool.setuptools.packages.find]
include = ["bookshelf*"]

[tool.setuptools]
include-package-data = true
